kubernetes/apps/base/redmanager/redmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmanager
  namespace: redmanager
  labels:
    app: redmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmanager
  template:
    metadata:
      labels:
        app: redmanager
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: redmanager
          image: registry.gitlab.com/starfruit6000/redmanager:v1.2.2@sha256:2615cef620514c7e3a3f29b7bcc89f96a5f6aa3ec5c5c90fc509f269da2fa3b2
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: redmanager-transmission-shared
              mountPath: /redmanager-transmission-shared
      volumes:
        - name: redmanager-transmission-shared
          persistentVolumeClaim:
            claimName: redmanager-transmission-shared
