kubernetes/apps/base/redmanager/gonic-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gonic
  namespace: redmanager
spec:
  type: ClusterIP
  selector:
    app: gonic
  ports:
    - name: http
      port: 4747
