kubernetes/apps/base/redmanager/navidrome-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: redmanager
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
    - name: http
      port: 4533
