kubernetes/apps/base/redmanager/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: redmanager
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
