kubernetes/apps/base/redmanager/redmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmanager
  namespace: redmanager
spec:
  type: ClusterIP
  selector:
    app: redmanager
  ports:
    - name: api
      port: 8080
