kubernetes/apps/base/redmanager/transmission-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: redmanager
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - name: transmission
      port: 9091
