kubernetes/apps/base/redmanager/wrtag-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrtag
  namespace: redmanager
spec:
  type: ClusterIP
  selector:
    app: wrtag
  ports:
    - name: wrtag
      port: 7373
