kubernetes/apps/base/redmanager/navidrome-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: redmanager
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - navidrome.home.parents-basement.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          port: 4533
