kubernetes/apps/base/redmanager/navidrome-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: redmanager
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - navidrome-base.home.parents-basement.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          port: 4533
